--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -202,6 +202,21 @@ a {
   }
 }
 
+@include break-below(lg) {
+  .hero {
+    padding-left: 50px;
+    padding-right: 50px;
+
+    h1 {
+      font-size: 2.5em;
+    }
+
+    p {
+      font-size: 1.5em;
+    }
+  }
+}
+
 @include break-below(md) {
   .hero {
     height: calc(100vh - #{$navbar-height});
@@ -212,7 +227,9 @@ a {
   // Main section
   .hero {
     height: calc(85vh - #{$navbar-height});
-    
+    padding-left: 20px;
+    padding-right: 20px;
+
     h1 {
       font-size: 2em;
     }
@@ -258,17 +275,6 @@ a {
 
   .menu-burger {
     display: inherit;
-  }
-
-  .navbar {
-
-  }
-}
-
-// Main section
-@include break-below(lg) {
-  .hero {
-    padding: 20px;
   }
 }
 
@@ -381,6 +387,7 @@ ul.menu-list > li > button {
 
 .features-list {
   display: grid;
+  grid-auto-rows: 1fr;
   grid-template-columns: repeat(3, 1fr);
   justify-content: center;
   background-color: #dbdbdb;
