--- a/client/src/styles/partials/_colors.scss
+++ b/client/src/styles/partials/_colors.scss
@@ -5,7 +5,7 @@ $white: rgb(255, 255, 255);
 
 // Blue
 $blue: #5762D5;
-$blue-dark: #116094;
+$blue-dark: rgb(62, 71, 161);
 
 // Green
 $green: #69A297;
