--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -110,6 +110,14 @@
   border-color: $purple;
 }
 
+.btn-gray {
+  background-color: transparent;
+}
+
+.btn-gray:hover {
+  background-color: #c7c7c7;
+}
+
 // ## Button variations
 .btn-fluid {
   width: 100%;
@@ -403,8 +411,8 @@ a {
 
 // Misc
 hr.divider {
-  border-color: #858585;
-  border-style: solid;
+  border-bottom: 1px solid transparent;
+  border-top: 1px solid#a2a2a2;
 }
 
 .icon-fixed-width {
@@ -597,6 +605,25 @@ ul.menu-list > li > button {
 }
 
 /* Modal */
+.border-bottom {
+  border-bottom: 1px solid #a0a0a0;
+  margin-bottom: 15px;
+}
+
+.border-top {
+  border-top: 1px solid #a0a0a0;
+  margin-top: 15px;
+}
+
+.modal-footer {
+  @extend .border-top;
+  margin-left: -15px;
+  padding-left: 15px;
+  margin-right: -15px;
+  padding-right: 15px;
+  padding-top: 15px;
+}
+
 .modal-cover {
   background-color: rgba(35, 35, 35, 0.7);
   position: fixed;
@@ -693,7 +720,7 @@ ul.menu-list > li > button {
 
 .book-grid-item:hover {
   box-shadow: 0px 0px 5px 0px #a9a9a9;
-  
+
   & > .favourite-mark {
     display: initial;
   }
@@ -904,7 +931,7 @@ ul.menu-list > li > button {
 
 .add-shelf-btn {
   margin-top: 4px;
-  font-size: 15px !important; 
+  font-size: 15px !important;
   width: 100%;
   margin-left: 0px;
 }
@@ -1026,7 +1053,7 @@ input[type="file"] {
   color: #505050;
   border-radius: 3px;
   border-collapse: collapse;
-  
+
   thead > tr {
     background-color: #f1f1f1;
   }
@@ -1034,16 +1061,44 @@ input[type="file"] {
   tr:hover {
     background-color: #e7e7e7;
     border-radius: 3px;
-
   }
 
-  td, th {
+  td,
+  th {
     padding: 7px 10px;
   }
 }
 
-.table, th, td {
+.table,
+th,
+td {
   border: 1px solid #d1d1d1;
+}
+
+// SELECT
+.select {
+  overflow: auto;
+  max-height: 300px;
+  width: 100%;
+}
+
+.selectable-list {
+  overflow: auto;
+  max-height: 110px;
+  padding: 5px;
+  border-radius: 3px;
+  border: 1px solid #c9c9c9;
+  background-color: #ffffff;
+}
+
+.selectable-list ul {
+  margin: 0;
+  list-style: none;
+  padding-left: 0;
+
+  li {
+    font-size: 16px;
+  }
 }
 
 @import "./partials/shame";
